[testFramework] Sanity check for --add-opens options to crash more friendly if Plugin DevKit is disabled
GitOrigin-RevId: e03360742bdb9a322e7f26bbd105930a4d774ff6